--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,4 @@ spring.datasource.username=TSuleymanov
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=none
 
-spring.liquibase.change-log=classpath:db/sql/db.changelog-master.yml
+spring.liquibase.change-log=classpath:changelog/db.changelog-master.yml
