--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,22 @@
-spring.datasource.driver-class-name=org.hsqldb.jdbc.JDBCDriver
-spring.datasource.url=jdbc:hsqldb:mem:testdb;
-spring.datasource.username=TSuleymanov
-spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=none
+#HSQLDB
+#spring.datasource.driver-class-name = org.hsqldb.jdbc.JDBCDriver
+#spring.datasource.url = jdbc:hsqldb:mem:testdb;
+#spring.datasource.username = TSuleymanov
+#spring.datasource.password =
+#spring.jpa.hibernate.ddl-auto = none
 
-spring.liquibase.change-log=classpath:changelog/db.changelog-master.yml
+#Liquibase
+spring.liquibase.change-log = classpath:changelog/db.changelog-master.yml
+spring.liquibase.default-schema = public
+spring.liquibase.database-change-log-lock-table = DATABASECHANGELOGLOCK
+spring.liquibase.clear-checksums = true
+
+#PostgreSQL
+spring.datasource.driver-class-name = org.postgresql.Driver
+spring.jpa.database = POSTGRESQL
+spring.datasource.url = jdbc:postgresql://localhost:5434/postgres
+spring.datasource.username = postgres
+spring.datasource.password = postgres
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql = true
+spring.jpa.hibernate.ddl-auto = none
