--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,18 +5,23 @@
 #spring.datasource.password =
 #spring.jpa.hibernate.ddl-auto = none
 
+server.port=8091
+
 #Liquibase
 spring.liquibase.change-log = classpath:changelog/db.changelog-master.yml
 spring.liquibase.default-schema = public
 spring.liquibase.database-change-log-lock-table = DATABASECHANGELOGLOCK
 spring.liquibase.clear-checksums = true
+spring.liquibase.enabled = true
+spring.liquibase.contexts = dev
+
 
 #PostgreSQL
 spring.datasource.driver-class-name = org.postgresql.Driver
 spring.jpa.database = POSTGRESQL
-spring.datasource.url = jdbc:postgresql://localhost:5434/postgres
+spring.datasource.url = jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username = postgres
 spring.datasource.password = postgres
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql = true
-spring.jpa.hibernate.ddl-auto = none
+spring.jpa.hibernate.ddl-auto = validate
