Добавил Apache Kafka

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@
 #spring.datasource.password =
 #spring.jpa.hibernate.ddl-auto = none
 
-server.port=8091
+server.port=8080
 
 #Liquibase
 spring.liquibase.change-log = classpath:changelog/db.changelog-master.yml
@@ -13,7 +13,7 @@ spring.liquibase.default-schema = public
 spring.liquibase.database-change-log-lock-table = DATABASECHANGELOGLOCK
 spring.liquibase.clear-checksums = true
 spring.liquibase.enabled = true
-spring.liquibase.contexts = dev
+
 
 
 #PostgreSQL
@@ -24,4 +24,11 @@ spring.datasource.username = postgres
 spring.datasource.password = postgres
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql = true
-spring.jpa.hibernate.ddl-auto = validate
+spring.jpa.hibernate.ddl-auto = none
+
+#Kafka
+
+spring.kafka.bootstrap-servers = localhost:29092
+spring.kafka.consumer.group-id = producerServer
+spring.kafka.producer.client-id = consumerServer
+
