Добавил Apache Kafka

--- a/src/main/resources/changelog/db.changelog-master.yml
+++ b/src/main/resources/changelog/db.changelog-master.yml
@@ -1,5 +1,3 @@
 databaseChangeLog:
-  - include:
-      file: db/sql/create_tables.sql
-  - include:
-      file: db/sql/insert_data.sql
+  - includeAll:
+      path: db/sql/
