--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,20 +14,17 @@ spring.liquibase.database-change-log-lock-table = DATABASECHANGELOGLOCK
 spring.liquibase.clear-checksums = true
 spring.liquibase.enabled = true
 
-
-
 #PostgreSQL
 spring.datasource.driver-class-name = org.postgresql.Driver
 spring.jpa.database = POSTGRESQL
-spring.datasource.url = jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url = jdbc:postgresql://localhost:5434/postgres
 spring.datasource.username = postgres
 spring.datasource.password = postgres
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql = true
-spring.jpa.hibernate.ddl-auto = none
+spring.jpa.hibernate.ddl-auto = update
 
 #Kafka
-
 spring.kafka.bootstrap-servers = localhost:29092
 spring.kafka.consumer.group-id = producerServer
 spring.kafka.producer.client-id = consumerServer
