--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@
 #spring.datasource.password =
 #spring.jpa.hibernate.ddl-auto = none
 
-server.port=8080
+server.port = 8091
 
 #Liquibase
 spring.liquibase.change-log = classpath:changelog/db.changelog-master.yml
@@ -18,11 +18,12 @@ spring.liquibase.enabled = true
 spring.datasource.driver-class-name = org.postgresql.Driver
 spring.jpa.database = POSTGRESQL
 spring.datasource.url = jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username = postgres
-spring.datasource.password = postgres
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
+spring.calcul=file:/C:/Projects/simple-spring-crud-app/src/main/resources/wsdl/calcul.wsdl
 
 #Kafka
 spring.kafka.bootstrap-servers = localhost:29092
