Добавил Exceptions для запросов

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@
 #spring.jpa.hibernate.ddl-auto = none
 
 server.port = 8091
+server.error.include-message=always
 
 #Liquibase
 spring.liquibase.change-log = classpath:changelog/db.changelog-master.yml
