изменил properties, перенастроил docker

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -5,6 +5,10 @@ server:
     include-message: always
 
 spring:
+
+  wsdl:
+    location: file:/C:/Projects/simple-spring-crud-app/src/main/resources/wsdl/calcul.wsdl
+
   #Liquibase
   liquibase:
     change-log: classpath:changelog/db.changelog-master.yml
@@ -42,6 +46,3 @@ spring:
       group-id: producerServer
     producer:
       client-id: consumerServer
-
-  wsdl:
-    location: "file:/C:/Projects/simple-spring-crud-app/src/main/resources/wsdl/calcul.wsdl"
