--- a/src/main/resources/application-docker.yml
+++ b/src/main/resources/application-docker.yml
@@ -31,16 +31,14 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
     show-sql: true
+    open-in-view: false
     hibernate:
       ddl-auto: update
 
   #Kafka
   kafka:
-    bootstrap-servers: loclahost:29092
+    bootstrap-servers: kafka:9092
     consumer:
       group-id: producerServer
     producer:
       client-id: consumerServer
-
-  wsdl:
-    location: "wsdl/calcul.wsdl"
