Добавил выгрузку списки сотрудников в pdf и excel

--- a/env/docker/app/Dockerfile
+++ b/env/docker/app/Dockerfile
@@ -1,3 +1,10 @@
+FROM maven:3.8.2-openjdk-8 as build
+
+COPY . /usr/src/myapp
+WORKDIR /usr/src/myapp
+
+RUN mvn clean package -DskipTests -e
+
 FROM openjdk:8-alpine
 
 ARG JAVA_PARAM="-Xms256M -Xmx1024M -XX:+UseG1GC"
@@ -5,9 +12,9 @@ ENV JAVA_PARAM=$JAVA_PARAM
 
 WORKDIR /opt/app
 
-COPY /src/main/resources/ /opt/app
+COPY /src/main/resources /opt/app
 
-COPY ../../target/*.jar /opt/app/app.jar
+COPY --from=build /usr/src/myapp/target/*.jar /opt/app/app.jar
 
 EXPOSE 8091
 
